<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="textview">TextView</string>
    <string name="Username">Enter Your Username</string>
    <string name="Pass">Enter Your Password</string>
    <string name="password">Password:</string>
    <string name="user_name">User Name:</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
</resources>
