<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />


    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/GridLayout1"
        android:layout_width="0dp"
        android:layout_height="207dp"
        android:layout_marginBottom="182dp"
        android:layout_marginTop="58dp"
        android:columnCount="4"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">


        <TextView
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_row="1"
            android:text="@string/user_name"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/input1"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:ems="10"
            android:hint="@string/Username"
            android:inputType="" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_row="2"
            android:text="@string/password"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/input2"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="2"
            android:ems="8"
            android:hint="@string/Pass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button1"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/login" />

    </GridLayout>
</android.support.constraint.ConstraintLayout>